--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,24 @@ code {
 }
 
 #root {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: rgba(248, 250, 252, 1);
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
 }
