--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,8 @@ code {
 #root {
   width: 100vw;
   min-height: 100vh;
-  background-color: rgba(248, 250, 252, 1);
+  background-color: rgb(255, 255, 255);
+
 }
 
 ul {
