--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 html {
   height: 100%;
   width: 100%;
-  width: 100vw;
-  min-height: 100vh;
+
+
 }
 
 body {
@@ -18,6 +18,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
+
 }
 
 code {
@@ -26,9 +27,10 @@ code {
 }
 
 #root {
-  width: 100vw;
-  min-height: 100vh;
+
+  height: 100%;
   background-color: rgb(255, 255, 255);
+
 
 }
 
