--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 html {
   height: 100%;
   width: 100%;
-
+  box-sizing: border-box;
 
 }
 
@@ -29,9 +29,8 @@ code {
 #root {
 
   height: 100%;
-  background-color: rgb(255, 255, 255);
-
-
+  background-color: #212121;
+  color: #fff
 }
 
 ul {
